# iflow2api

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_EN.md  build.py  docker-compose.yml  flet_build.py  plan.md  pyproject.toml  research.md
.github/workflows/: build.yml
docs/: DOCKER.md
iflow2api/: __init__.py  app.py  config.py  crypto.py  gui.py  i18n.py  oauth.py  oauth_login.py  proxy.py  ratelimit.py  server.py  settings.py  token_refresher.py  transport.py  tray.py  updater.py  version.py  vision.py
iflow2api/admin/: routes.py
iflow2api/admin/static/: index.html
iflow2api/admin/static/js/: app.js
iflow2api/cpa/: __init__.py  body.py  constants.py  headers.py  telemetry.py
iflow2api/locales/: en.json  zh.json
src/iflow2api/: gui.py  server.py  settings.py
tests/: test_custom_auth.py
