[project]
name = "iflow2api"
version = "1.5.10"
description = "将 iFlow CLI 的 AI 服务暴露为 OpenAI 兼容 API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "iflow2api", email = "1475429618@qq.com"}
]
keywords = ["openai", "api", "iflow", "ai", "llm", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "flet>=0.25.0",
    # P0: 系统托盘
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
full = [
    "cryptography>=42.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/cacaview/iflow2api"
Repository = "https://github.com/cacaview/iflow2api"
Issues = "https://github.com/cacaview/iflow2api/issues"

[project.scripts]
iflow2api = "iflow2api.main:main"
iflow2api-gui = "iflow2api.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iflow2api"]

[tool.hatch.build.targets.sdist]
exclude = ["build.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "cryptography>=46.0.5",
]
